Correction des cartes visibles

--- a/src/game/view/animation/Shuffle.css
+++ b/src/game/view/animation/Shuffle.css
@@ -17,6 +17,6 @@
 
 @keyframes card-shuffle {
 
-  from {transform: translateX(-0.8em) translateY(-2.5em)}
+  from {transform: translateX(0.8em) translateY(-2.5em)}
   to {transform: translateX(0em) translateY(0em)}
 }
